fixed unknow doctor error